--- a/Examen_Rob_Santillan_Sosa_Gerardo.ipynb
+++ b/Examen_Rob_Santillan_Sosa_Gerardo.ipynb
@@ -5,7 +5,7 @@
    "id": "50acb627-c667-44a7-8f9b-4517bbdc9d65",
    "metadata": {},
    "source": [
-    "# UNIVESIDAD AUTONOMA DE MÉXICO"
+    "# UNIVERSIDAD NACIONAL AUTONOMA DE MÉXICO"
    ]
   },
   {
